# cutty

./: .gitignore  LICENSE  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cutty-audio/: Cargo.toml
src-tauri/crates/cutty-audio/src/: clock.rs  error.rs  lib.rs  mixer.rs  offline.rs  player.rs  source.rs
src-tauri/crates/cutty-engine/: Cargo.toml
src-tauri/crates/cutty-engine/src/: autosave.rs  command.rs  engine.rs  error.rs  keyframes.rs  lib.rs  model.rs  project_file.rs  recents.rs  resolve.rs  snap.rs
src-tauri/crates/cutty-engine/tests/: keyframes.rs  persistence.rs  resolve_snap.rs  stills.rs  text.rs  timeline.rs  tracks.rs  transitions.rs
src-tauri/crates/cutty-engine/tests/common/: mod.rs
src-tauri/crates/cutty-gpu/: Cargo.toml
src-tauri/crates/cutty-gpu/src/: composite.wgsl  lib.rs  transition.rs
src-tauri/crates/cutty-gpu/src/transitions/: circleopen.wgsl  crosszoom.wgsl  cube.wgsl  directional.wgsl  doorway.wgsl  fade.wgsl  glitchmemories.wgsl  linearblur.wgsl  pixelize.wgsl  radial.wgsl  scaffold.wgsl  windowslice.wgsl  wipedown.wgsl  wipeleft.wgsl  wiperight.wgsl  wipeup.wgsl
src-tauri/crates/cutty-media/: Cargo.toml
src-tauri/crates/cutty-media/src/: audio_layout.rs  audio_source.rs  cache.rs  compose.rs  decode.rs  encoders.rs  error.rs  export.rs  files.rs  filmstrip.rs  framecache.rs  jpeg.rs  lib.rs  peaks.rs  playback.rs  player.rs  probe.rs  proxy.rs  render.rs  test_support.rs  thumbnail.rs  tools.rs  video.rs
src-tauri/crates/cutty-media/tests/: acceptance.rs  audio_envelope.rs  export_acceptance.rs  export_render.rs  golden_frames.rs  phase2_short.rs  stills_render.rs  timeline_playback.rs  transitions_render.rs
src-tauri/crates/cutty-text/: Cargo.toml
src-tauri/crates/cutty-text/src/: lib.rs
src-tauri/src/: commands.rs  engine_ipc.rs  export_ipc.rs  lib.rs  main.rs  project_ipc.rs
src/components/: ExportDialog.tsx  Inspector.tsx  MediaPool.tsx  Player.tsx  PlayerGizmo.tsx  ProjectDialogs.tsx  StartOverlay.tsx  Timeline.tsx  Toasts.tsx  TopBar.tsx
src/components/ui/: SelectField.tsx
src/lib/: bench.ts  engineIpc.ts  exportIpc.ts  frameSink.ts  ipc.ts  projectActions.ts  projectIpc.ts  textPresets.ts
src/state/: engineSync.ts  exportStore.ts  mediaStore.ts  playerStore.ts  projectStore.ts  sessionStore.ts  toastStore.ts
src/timeline/: actions.ts  controller.ts  dirty.ts  envelope.ts  filmstrip.ts  perf.ts  poolDrag.ts  renderer.ts  view.ts  waveform.ts
