[workspace]
members = [
    "crates/cutty-engine",
    "crates/cutty-media",
    "crates/cutty-gpu",
    "crates/cutty-audio",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[package]
name = "cutty"
version.workspace = true
description = "A fast, lightweight CapCut-style video editor for Linux"
authors = ["love"]
edition.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cutty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cutty-engine = { path = "crates/cutty-engine" }
cutty-media = { path = "crates/cutty-media" }
cutty-gpu = { path = "crates/cutty-gpu" }
cutty-audio = { path = "crates/cutty-audio" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
