[package]
name = "cutty-audio"
description = "Audio decode (symphonia) and output (cpal); the audio thread is the master clock"
version.workspace = true
edition.workspace = true

[dependencies]
cpal = "0.18.1"
ringbuf = "0.4"
# Formats/codecs: MP4/AAC covers proxies (always transcoded to LC-AAC);
# the rest covers audio-only originals placed straight on the audio track.
symphonia = { version = "0.6.0", default-features = false, features = [
    "isomp4",
    "aac",
    "mp3",
    "wav",
    "pcm",
    "flac",
    "ogg",
    "vorbis",
    "adpcm",
    "opt-simd",
] }
thiserror.workspace = true
