[package]
name = "cutty-engine"
description = "Project model, timeline operations, command system, undo/redo"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
