[package]
name = "cutty-media"
description = "Media I/O via ffmpeg: probe, decode, proxy generation, thumbnails, export"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.5"
cutty-audio = { version = "0.1.0", path = "../cutty-audio" }
dirs = "6.0.0"
ffmpeg-sidecar = { version = "2.5.2", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
turbojpeg = { version = "1.4.0", default-features = false, features = ["pkg-config"] }
