[package]
name = "cutty-media"
description = "Media I/O via ffmpeg: probe, decode, proxy generation, thumbnails, export"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = "1.8.5"
cutty-audio = { version = "0.1.0", path = "../cutty-audio" }
cutty-engine = { version = "0.1.0", path = "../cutty-engine" }
cutty-gpu = { version = "0.1.0", path = "../cutty-gpu" }
cutty-text = { version = "0.1.0", path = "../cutty-text" }
dirs = "6.0.0"
# CLI ffmpeg for transcode-shaped jobs (probe, proxy, thumbs, export)…
ffmpeg-sidecar = { version = "2.5.2", default-features = false }
# …and in-process libav for interactive decode (playback, scrubbing),
# where process spawns can't meet the <100 ms seek budget.
ffmpeg-the-third = "5.0.0"
# EAGAIN for libav's send/receive decode protocol.
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
turbojpeg = { version = "1.4.0", default-features = false, features = ["pkg-config"] }
